2006-05-08  Philip Blundell  <pb@reciva.com>

	* main.c (update_view): Don't attempt to update nonexistent widgets.
	(main): Move calendar creation inside if-block.

2006-05-06  Phil Blundell  <pb@reciva.com>

	* configure.ac: Require libeventdb >= 0.29.

	* main.c (main): Suppress sidebar on small or portrait-format
	screens.

2006-04-25  Neal H. Walfield  <neal@gnu.org>

	* week_view.c (gtk_week_view_reload_events): Call
	event_db_list_for_period, not event_db_list_untimed_for_period.

2006-04-25  Neal H. Walfield  <neal@gnu.org>

	* event-ui.c: Synchronize libeventdb API changes to
	event_get_untimed and event_set_untimed.
	* globals.h: Likewise.
	* import-vcal.c: Likewise.
	* week_view.c: Likewise.

2006-04-24  Neal H. Walfield  <neal@gnu.org>

	* main.c (main): Make PRIMARY a pane, not a box.  Update users.
	Don't create SEP.

2006-04-24  Neal H. Walfield  <neal@gnu.org>

	* event-list.c (gtk_event_list_base_class_init): Correctly
	initialize PARENT_CLASS.

2006-04-24  Neal H. Walfield  <neal@gnu.org>
	Reported by Jan Arne Petersen.

	* event-ui.c (edit_event): Make S->RADIOBUTTONENDAFTER active if
	appropriate.  Initialize S->ENDSPIN to R->COUNT.

2006-04-24  Neal H. Walfield  <neal@gnu.org>

	* event-ui.c (edit_event): Set S->PAGE as a function of the result
	of is_reminder, not event_get_duration.  Invert the logic used to
	set S->REMINDERTIMEBUTTON.

2006-04-24  Neal H. Walfield  <neal@gnu.org>

	* day_render.c (gtk_day_render_button_press): Take into account
	the minimum event rectangle height.

2006-04-24  Neal H. Walfield  <neal@gnu.org>

	* event-ui.c (click_delete): Use event_is_recurrence to check if
	an event is a recurrence.
	(click_ok): Remove unused variables new_event and was_recur.  Use
	event_get_recurrence_start to get the start of the recurrence
	rather than event_get_start.  Use event_set_recurrence_start to
	set the start of the recurrence.
	(edit_event): Use event_get_recurrence_start to get the start of